modify desktop and mobile style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <header>
         <nav class="nav">
-            <a href="#" class="nav__image"><img src="assets/images/logo2.png" alt="logo image"></a>
+            <!-- <a href="#" class="nav__image"><img src="assets/images/logo2.png" alt="logo image"></a> -->
+            <a href="#" class="nav__logo"> <span>max sauerbrey</span> </a>
             <img src="assets/images/icon-menu.svg" id="toggle-menu" class="nav__icon-menu " alt="icon menu ">
             <ul class="nav__container ">
                 <li><a href="# " class="nav__item ">About me</a></li>
@@ -21,8 +22,28 @@
                 <li><a href="# " class="nav__item ">Contact</a></li>
             </ul>
         </nav>
-
     </header>
+
+    <main>
+        <div class="part1">
+            <div class="heading">
+                <h1 class="title">¡Hola!<span class="title-name">Mi nombre es Max</span>y soy <span class="title-occupation"> Front-End Developer. </span></h1>
+                <div class="container-curriculum">
+                    <a href="https://cdn.memegenerator.es/imagenes/memes/full/28/18/28187049.jpg" target="_blank" class="curriculum">Curriculum</a>
+
+                </div>
+                <!-- <a href="#" class="contact">Contactame</a> -->
+            </div>
+            <aside class="aside-profile">
+                <img src="assets/images/round-gradient-designify(4)(1) (Small).png" class="profile-image border-gradient border-gradient-purple">
+            </aside>
+        </div>
+
+
+        <div class="part2">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p>
+        </div>
+    </main>
     <script src="js/script.js "></script>
 </body>
 
