add new html sections and modify desktop and mobile style

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="#" class="nav__logo"> <span>max sauerbrey</span> </a>
             <img src="assets/images/icon-menu.svg" id="toggle-menu" class="nav__icon-menu " alt="icon menu ">
             <ul class="nav__container ">
-                <li><a href="# " class="nav__item ">About me</a></li>
-                <li><a href="# " class="nav__item ">Skills</a> </li>
+                <li><a href="#section-2" class="nav__item ">About me</a></li>
+                <li><a href="#section-3" class="nav__item ">Skills</a> </li>
                 <li><a href="# " class="nav__item ">Projects</a></li>
                 <li><a href="# " class="nav__item ">Contact</a></li>
             </ul>
@@ -25,24 +25,104 @@
     </header>
 
     <main>
-        <div class="part1">
+        <section class="section1" id="section1">
             <div class="heading">
                 <h1 class="title">¡Hola!<span class="title-name">Mi nombre es Max</span>y soy <span class="title-occupation"> Front-End Developer. </span></h1>
-                <div class="container-curriculum">
-                    <a href="https://cdn.memegenerator.es/imagenes/memes/full/28/18/28187049.jpg" target="_blank" class="curriculum">Curriculum</a>
-
-                </div>
-                <!-- <a href="#" class="contact">Contactame</a> -->
+                <aside class="aside-profile">
+                    <img src="assets/images/round-gradient-designify(4)(1) (Small).png" class="profile-image border-gradient border-gradient-purple">
+                </aside>
             </div>
-            <aside class="aside-profile">
-                <img src="assets/images/round-gradient-designify(4)(1) (Small).png" class="profile-image border-gradient border-gradient-purple">
-            </aside>
-        </div>
+            <div class="paragraph-container">
+                <!-- <p class="paragraph"> Estoy buscando incorporarme a un equipo dinamico y desafiante y asi embarcarme en esta nuev</p> -->
+                <p class="paragraph paragraph-1"> Estoy buscando una oportunidad para comenzar mi carrera en tecnologia.</p>
+                <p class="paragraph paragraph-2"> Disponible para nuevos desafios. ¡Vamos a trabajar juntos!</p>
+            </div>
+            <!-- <div class="aside-container"> -->
+            <div class="container-curriculum">
+                <a href="https://cdn.memegenerator.es/imagenes/memes/full/28/18/28187049.jpg" target="_blank" class="curriculum">Descargar CV</a>
+            </div>
+            <!-- </div> -->
+        </section>
 
 
-        <div class="part2">
+        <section class="section2" id="section-2">
+            <div class="section2__photo-container">
+                <img src="./assets/images/pexels-olia-danilevich-4974915.jpg" alt="about me photo" class="section2__photo">
+            </div>
+            <div class="section2__text-container">
+                <h2 class="section2__title"> Max Sauerbrey</h2>
+                <h3 class="section2__subtitle">Desarrollador Front-End</h3>
+                <p class="section2__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p>
+                <div class="section2__button">
+                    <a href="">Contactar</a>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="section3" id="section-3">
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p> -->
+            <div class="boxes-container">
+                <div class="box box1">
+                    <div class="box-container">
+                        <h2 class="title-box">Llamada de consulta</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">1</div>
+                            <p class="text-box"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam odit facilis aliquid magni .Amet ipsa placeat illum eum. Corporis laudantium hic aperiam omnis numquam facilis?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box2">
+                    <div class="box-container">
+                        <h2 class="title-box">Estrategia</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">2</div>
+                            <p class="text-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea libero iste ullam nobis facere magnam atque omnis, molestias, provident pariatur voluptas non enim, ad autem maiores. Exercitationem, debitis ipsa!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box3">
+                    <div class="box-container">
+                        <h2 class="title-box">Diseño Wireframe</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">3</div>
+                            <p class="text-box">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed doloribus atque quo voluptatum unde labore dolore? Nobis recusandae aspernatur id corporis asperiores, qui non.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box4">
+                    <div class="box-container">
+                        <h2 class="title-box">Diseño Web</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">4</div>
+                            <p class="text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique alias excepturi error, quaerat autem, aliquid consequuntur repudiandae doloribus reprehenderit magnam? Qui, vel!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box5">
+                    <div class="box-container">
+                        <h2 class="title-box">Desarrollo Web</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">5</div>
+                            <p class="text-box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis illum veniam, eos deleniti tempore earum, consequuntur ea quia placeat eligendi nihil facilis quibusdam a quam tempora tenetur quos nemo! A?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box box6">
+                    <div class="box-container">
+                        <h2 class="title-box">¡Entrega y lanzamiento!</h2>
+                        <div class="text-box-container">
+                            <div class="number-box">6</div>
+                            <p class="text-box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde expedita, asperiores vel consequuntur vero eos inventore magnam reiciendis delectus. Corrupti alias perferendis necessitatibus?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section4" id="section-3">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p>
-        </div>
+        </section>
     </main>
     <script src="js/script.js "></script>
 </body>
