--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Landing page portfolio</title>
+    <script src="https://kit.fontawesome.com/4aa1e780ef.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav class="nav">
             <!-- <a href="#" class="nav__image"><img src="assets/images/logo2.png" alt="logo image"></a> -->
-            <a href="#" class="nav__logo"> <span>max sauerbrey</span> </a>
+            <a href="#" class="nav__logo"> <span>Max Willi.</span> </a>
             <img src="assets/images/icon-menu.svg" id="toggle-menu" class="nav__icon-menu " alt="icon menu ">
             <ul class="nav__container ">
-                <li><a href="#section-2" class="nav__item ">About me</a></li>
-                <li><a href="#section-3" class="nav__item ">Skills</a> </li>
-                <li><a href="# " class="nav__item ">Projects</a></li>
-                <li><a href="# " class="nav__item ">Contact</a></li>
+                <li><a href="#section-2" class="nav__item ">Sobre mi</a></li>
+                <li><a href="#section-3" class="nav__item ">Servicios</a> </li>
+                <li><a href="#section-4" class="nav__item ">Proyectos</a></li>
+                <li><a href="#section-5" class="nav__item ">Contacto</a></li>
             </ul>
         </nav>
-    </header>
 
+    </header>
     <main>
         <section class="section1" id="section1">
             <div class="heading">
                 <h1 class="title">¡Hola!<span class="title-name">Mi nombre es Max</span>y soy <span class="title-occupation"> Front-End Developer. </span></h1>
-                <aside class="aside-profile">
-                    <img src="assets/images/round-gradient-designify(4)(1) (Small).png" class="profile-image border-gradient border-gradient-purple">
-                </aside>
+                <div class="paragraph-container">
+                    <p class="paragraph paragraph-1"> Estoy buscando una oportunidad para comenzar mi carrera en tecnologia. Disponible para nuevos desafios. ¡Vamos a trabajar juntos!</p>
+                </div>
+                <!-- <div class="aside-container"> -->
+                <div class="container-curriculum">
+                    <a href="https://cdn.memegenerator.es/imagenes/memes/full/28/18/28187049.jpg" target="_blank" class="curriculum">Descargar CV</a>
+                </div>
             </div>
-            <div class="paragraph-container">
-                <!-- <p class="paragraph"> Estoy buscando incorporarme a un equipo dinamico y desafiante y asi embarcarme en esta nuev</p> -->
-                <p class="paragraph paragraph-1"> Estoy buscando una oportunidad para comenzar mi carrera en tecnologia.</p>
-                <p class="paragraph paragraph-2"> Disponible para nuevos desafios. ¡Vamos a trabajar juntos!</p>
-            </div>
-            <!-- <div class="aside-container"> -->
-            <div class="container-curriculum">
-                <a href="https://cdn.memegenerator.es/imagenes/memes/full/28/18/28187049.jpg" target="_blank" class="curriculum">Descargar CV</a>
-            </div>
+            <aside class="aside-profile">
+                <img src="assets/images/round-gradient-designify(4)(1) (Small).png" class="profile-image border-gradient border-gradient-purple">
+                <div class="icons fa-2x">
+                    <a href="#">
+                        <i class="fa-brands fa-github icon fa-bounce-hover"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin icon fa-bounce-hover"></i>
+                    </a>
+                </div>
+            </aside>
             <!-- </div> -->
         </section>
 
@@ -50,11 +57,14 @@
                 <img src="./assets/images/pexels-olia-danilevich-4974915.jpg" alt="about me photo" class="section2__photo">
             </div>
             <div class="section2__text-container">
-                <h2 class="section2__title"> Max Sauerbrey</h2>
+                <h2 class="section2__title"> Max Willi Sauerbrey</h2>
                 <h3 class="section2__subtitle">Desarrollador Front-End</h3>
                 <p class="section2__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p>
+
+
                 <div class="section2__button">
                     <a href="">Contactar</a>
+
                 </div>
             </div>
 
@@ -67,8 +77,9 @@
                     <div class="box-container">
                         <h2 class="title-box">Llamada de consulta</h2>
                         <div class="text-box-container">
-                            <div class="number-box">1</div>
-                            <p class="text-box"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam odit facilis aliquid magni .Amet ipsa placeat illum eum. Corporis laudantium hic aperiam omnis numquam facilis?</p>
+                            <p class="number-box">1
+                                </>
+                                <p class="text-box"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam odit facilis aliquid magni .Amet ipsa placeat illum eum. Corporis laudantium hic aperiam omnis numquam facilis?</p>
                         </div>
                     </div>
                 </div>
@@ -76,7 +87,7 @@
                     <div class="box-container">
                         <h2 class="title-box">Estrategia</h2>
                         <div class="text-box-container">
-                            <div class="number-box">2</div>
+                            <p class="number-box">2</p>
                             <p class="text-box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea libero iste ullam nobis facere magnam atque omnis, molestias, provident pariatur voluptas non enim, ad autem maiores. Exercitationem, debitis ipsa!</p>
                         </div>
                     </div>
@@ -85,7 +96,7 @@
                     <div class="box-container">
                         <h2 class="title-box">Diseño Wireframe</h2>
                         <div class="text-box-container">
-                            <div class="number-box">3</div>
+                            <p class="number-box">3</p>
                             <p class="text-box">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed doloribus atque quo voluptatum unde labore dolore? Nobis recusandae aspernatur id corporis asperiores, qui non.</p>
                         </div>
                     </div>
@@ -94,7 +105,7 @@
                     <div class="box-container">
                         <h2 class="title-box">Diseño Web</h2>
                         <div class="text-box-container">
-                            <div class="number-box">4</div>
+                            <p class="number-box">4</p>
                             <p class="text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique alias excepturi error, quaerat autem, aliquid consequuntur repudiandae doloribus reprehenderit magnam? Qui, vel!</p>
                         </div>
                     </div>
@@ -103,7 +114,7 @@
                     <div class="box-container">
                         <h2 class="title-box">Desarrollo Web</h2>
                         <div class="text-box-container">
-                            <div class="number-box">5</div>
+                            <p class="number-box">5</p>
                             <p class="text-box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis illum veniam, eos deleniti tempore earum, consequuntur ea quia placeat eligendi nihil facilis quibusdam a quam tempora tenetur quos nemo! A?</p>
                         </div>
                     </div>
@@ -112,7 +123,7 @@
                     <div class="box-container">
                         <h2 class="title-box">¡Entrega y lanzamiento!</h2>
                         <div class="text-box-container">
-                            <div class="number-box">6</div>
+                            <p class="number-box">6</p>
                             <p class="text-box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde expedita, asperiores vel consequuntur vero eos inventore magnam reiciendis delectus. Corrupti alias perferendis necessitatibus?
                             </p>
                         </div>
@@ -120,11 +131,109 @@
                 </div>
             </div>
         </section>
-        <section class="section4" id="section-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p>
+        <section class="section4" id="section-4">
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident labore excepturi iste rem sunt pariatur voluptatibus eos eaque, mollitia velit voluptatem quidem voluptates odit veritatis corrupti numquam amet quasi?</p> -->
+            <h2 class="projects-title">Últimos proyectos </h2>
+            <div class="projects-container">
+                <div class="project-1 project">
+                    <div class="heading-card">
+                        <h3 class="project-title">Projecto 1</h3>
+                        <div class="card-icons">
+                            <a href="#" class="project-repository fa-2x"> <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="#" class="project-github fa-2x"><i class="fa-brands fa-github-alt"></i></a>
+                        </div>
+                    </div>
+                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <figure class="image-container">
+                        <img src="assets/images/homepage-seen-on-laptop-screen.jpg" alt="project image" class="image-project">
+                    </figure>
+                </div>
+                <div class="project-2 project">
+                    <div class="heading-card">
+                        <h3 class="project-title">Projecto 2</h3>
+                        <div class="card-icons">
+                            <a href="#" class="project-repository fa-2x"> <i class=" fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="#" class="project-github fa-2x"> <i class="fa-brands fa-github-alt"></i></a>
+                        </div>
+                    </div>
+                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <figure class="image-container">
+                        <img src="assets/images/homepage-seen-on-laptop-screen.jpg" alt="project image" class="image-project">
+                    </figure>
+                </div>
+                <div class="project-3 project">
+                    <div class="heading-card">
+                        <h3 class="project-title">Projecto 3</h3>
+                        <div class="card-icons">
+                            <a href="#" class="project-repository fa-2x"> <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="#" class="project-github fa-2x"> <i class="fa-brands fa-github-alt"></i></a>
+                        </div>
+                    </div>
+                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <figure class="image-container">
+                        <img src="assets/images/homepage-seen-on-laptop-screen.jpg" alt="project image" class="image-project">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section class="section-5" id="section-5">
+            <h2 class="contact-me-title">Contactame</h2>
+            <form action="" class="form">
+                <div class="form__subject-input-container input">
+                    <label for="subject"></label>
+                    <input class="form__subject-input" type="text" id="subject" placeholder="Asunto" required>
+                </div>
+                <div class="form__name-input-container input">
+                    <label for="name"></label>
+                    <input class="form__name-input" type="text" id="name" placeholder="Nombre " required>
+                </div>
+                <div class="form__email-input-container input">
+                    <label for="email"></label>
+                    <input class="form__email-input" type="email" name="email" id="email" placeholder="Email ">
+                </div>
+                <div class="form__text-input-container input">
+                    <label for="text"></label>
+                    <textarea class="form__text-input" name="text" id="text" cols="10" rows="4" placeholder="Mensaje"></textarea>
+                </div>
+                <div class="form__submit-input-container input">
+                    <label for="submit"></label>
+                    <input class="form__submit-input" type="submit" value="Enviar" id="submit">
+                </div>
+            </form>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__text">
+            <a class="footer__logo" href=""><span>Max willi.</span></a>
+            <p class="footer__paragraph"> © 2022 Max Willi Sauerbrey Larbiou</p>
+        </div>
+        <div class="footer__icons fa-2x">
+            <div class="footer__icon-twitter footer__icon">
+                <a href="">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </div>
+            <div class="footer__icon-linkedin footer__icon">
+                <a href="">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="footer__icon-github footer__icon">
+                <a href="">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+            <div class="footer__icon-email footer__icon">
+                <a href="">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+
+    </footer>
+
     <script src="js/script.js "></script>
+
 </body>
 
 </html>
